// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`facepaint literal 1 1`] = `"css-1n438h9"`;

exports[`facepaint literal 1 2`] = `
@media (min-width:420px) {
  .glamor-0 {
    background: red;
  }
}

<div
  className="glamor-0"
>
  foo
</div>
`;

exports[`facepaint literal 1 3`] = `
"@media (min-width:420px) {
  .css-1n438h9 {
    background: red;
  }
}"
`;

exports[`facepaint literal 2 1`] = `"css-1k7f7mv"`;

exports[`facepaint literal 2 2`] = `
@media (min-width:420px) {
  .glamor-0 {
    background: red;
  }
}

@media (min-width:920px) {
  .glamor-0 {
    background: green;
  }
}

<div
  className="glamor-0"
>
  foo
</div>
`;

exports[`facepaint literal 2 3`] = `
"@media (min-width:420px) {
  .css-1k7f7mv {
    background: red;
  }
}

@media (min-width:920px) {
  .css-1k7f7mv {
    background: green;
  }
}"
`;

exports[`facepaint literal all 1`] = `"css-1ahnw43"`;

exports[`facepaint literal all 2`] = `
@media (min-width:420px) {
  .glamor-0 {
    background: red;
  }
}

@media (min-width:920px) {
  .glamor-0 {
    background: green;
  }
}

@media (min-width:1120px) {
  .glamor-0 {
    background: blue;
  }
}

@media (min-width:11200px) {
  .glamor-0 {
    background: orange;
  }
}

<div
  className="glamor-0"
>
  foo
</div>
`;

exports[`facepaint literal all 3`] = `
"@media (min-width:420px) {
  .css-1ahnw43 {
    background: red;
  }
}

@media (min-width:920px) {
  .css-1ahnw43 {
    background: green;
  }
}

@media (min-width:1120px) {
  .css-1ahnw43 {
    background: blue;
  }
}

@media (min-width:11200px) {
  .css-1ahnw43 {
    background: orange;
  }
}"
`;
